[package]
name = "rcs3ud"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.97.0"
aws-smithy-runtime-api = "1.8.3"
serde = { version = "1.0.219", features = ["derive"] }
sipper = "0.1.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.46.1", features = ["fs"] }

[dev-dependencies]
aws-config = "1.8.2"
ron = "0.10.1"
tokio = { version = "1.46.1", features = ["full"] }
